--- a/globe/index.html
+++ b/globe/index.html
@@ -84,19 +84,7 @@
         color: #fff;
       }
 
-      #ce span {
-        display: none;
-      }
-
-      #ce {
-        width: 107px;
-        height: 55px;
-        display: block;
-        position: absolute;
-        bottom: 15px;
-        left: 20px;
-        background: url(/globe/ce.png);
-      }
+    
 
 
     </style>
@@ -105,23 +93,18 @@
 
   <div id="container"></div>
 
-  <div id="info">
-    <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span> Created by the Google Data Arts Team <span class="bull">&bull;</span> Data acquired from <a href="http://sedac.ciesin.columbia.edu/gpw/">SEDAC</a>
-  </div>
+ 
 
   <div id="currentInfo">
-    <span id="year1990" class="year">1990</span>
-    <span id="year1995" class="year">1995</span>
-    <span id="year2000" class="year">2000</span>
+    <span id="year1990" class="year">Me</span>
+    <span id="year1995" class="year">Friends </span>
+    <span id="year2000" class="year">Everyone</span>
   </div>
 
   <div id="title">
-    World Population
+    NQueens
   </div>
 
-  <a id="ce" href="http://www.chromeexperiments.com/globe">
-    <span>This is a Chrome Experiment</span>
-  </a>
 
   <script type="text/javascript" src="/globe/third-party/Three/ThreeWebGL.js"></script>
   <script type="text/javascript" src="/globe/third-party/Three/ThreeExtras.js"></script>
