--- a/globe/index.html
+++ b/globe/index.html
@@ -66,7 +66,7 @@
         padding: 10px;
       }
 
-      .year {
+      .who {
         font: 16px Georgia;
         line-height: 26px;
         height: 30px;
@@ -79,7 +79,7 @@
         -webkit-transition: all 0.1s ease-out;
       }
 
-      .year:hover, .year.active {
+      .who:hover, .who.active {
         font-size: 23px;
         color: #fff;
       }
@@ -96,9 +96,9 @@
  
 
   <div id="currentInfo">
-    <span id="year1990" class="year">Me</span>
-    <span id="year1995" class="year">Friends </span>
-    <span id="year2000" class="year">Everyone</span>
+    <span id="whoMe" class="who">Me</span>
+    <span id="whoFriends" class="who">Friends </span>
+    <span id="whoEveryone" class="who">Everyone</span>
   </div>
 
   <div id="title">
@@ -118,7 +118,7 @@
       Detector.addGetWebGLMessage();
     } else {
 
-      var years = ['1990','1995','2000'];
+      var who = ['Me','Friends','Everyone'];
       var container = document.getElementById('container');
       var globe = new DAT.Globe(container);
       console.log(globe);
@@ -126,21 +126,21 @@
 
       var settime = function(globe, t) {
         return function() {
-          new TWEEN.Tween(globe).to({time: t/years.length},500).easing(TWEEN.Easing.Cubic.EaseOut).start();
-          var y = document.getElementById('year'+years[t]);
-          if (y.getAttribute('class') === 'year active') {
+          new TWEEN.Tween(globe).to({time: t/who.length},500).easing(TWEEN.Easing.Cubic.EaseOut).start();
+          var y = document.getElementById('who'+who[t]);
+          if (y.getAttribute('class') === 'who active') {
             return;
           }
-          var yy = document.getElementsByClassName('year');
+          var yy = document.getElementsByClassName('who');
           for(i=0; i<yy.length; i++) {
-            yy[i].setAttribute('class','year');
+            yy[i].setAttribute('class','who');
           }
-          y.setAttribute('class', 'year active');
+          y.setAttribute('class', 'who active');
         };
       };
 
-      for(var i = 0; i<years.length; i++) {
-        var y = document.getElementById('year'+years[i]);
+      for(var i = 0; i<who.length; i++) {
+        var y = document.getElementById('who'+who[i]);
         y.addEventListener('mouseover', settime(globe,i), false);
       }
 
