about to start fucking with json data

--- a/globe/index.html
+++ b/globe/index.html
@@ -141,6 +141,7 @@
         };
       };
 
+      //Adds event listeners to all the who's
       for(var i = 0; i<who.length; i++) {
         var view = document.getElementById('who'+who[i]);
         view.addEventListener('mouseover', setwho(globe,i), false);
