--- a/globe/index.html
+++ b/globe/index.html
@@ -152,7 +152,7 @@
 
 
       xhr = new XMLHttpRequest();
-      xhr.open('GET', '/globe/population909500.json', true);
+      xhr.open('GET', '/globe/supercomputer.json', true);
       xhr.onreadystatechange = function(e) {
         if (xhr.readyState === 4) {
           if (xhr.status === 200) {
