--- a/globe/index.html
+++ b/globe/index.html
@@ -159,7 +159,7 @@
             var data = JSON.parse(xhr.responseText);
             window.data = data;
             for (i=0;i<data.length;i++) {
-              globe.addData(data[i][1], {format: 'magnitude', name: data[i][0], animated: true});
+              globe.addData(data[i][1], {format: 'magnitude', name: data[i][0], animated: true, relationship: 'everyone'});
             }
             globe.createPoints();
             setwho(globe,0)();
