--- a/globe/index.html
+++ b/globe/index.html
@@ -158,9 +158,8 @@
           if (xhr.status === 200) {
             var data = JSON.parse(xhr.responseText);
             window.data = data;
-            for (i=0;i<data.length;i++) {
-              globe.addData(data[i][1], {format: 'magnitude', name: data[i][0], animated: true, relationship: 'everyone'});
-            }
+            globe.addData(data[1], {format: 'magnitude', name: data[0], animated: true, relationship: 'everyone'});
+            
             globe.createPoints();
             setwho(globe,0)();
             globe.animate();
