--- a/globe/index.html
+++ b/globe/index.html
@@ -158,7 +158,7 @@
           if (xhr.status === 200) {
             var data = JSON.parse(xhr.responseText);
             window.data = data;
-            globe.addData(data[1], {format: 'magnitude', name: data[0], animated: true, relationship: 'everyone'});
+            globe.addData(data[1], {format: 'magnitude', name: data[0], animated: true});
             
             globe.createPoints();
             setwho(globe,0)();
