--- a/globe/index.html
+++ b/globe/index.html
@@ -163,7 +163,7 @@
             globe.addData(data[1], {format: 'magnitude', name: data[0]});
             
             globe.createPoints();
-            setwho(globe,2)();
+            //setwho(globe,0)();
             globe.animate();
           }
         }
